src/test/deca/context/valid/return/return_with_method_call.deca
// Description :
// Return d’un appel de méthode
//
// Resultats :
// ok

class b {
    int helper() { return 3; }
    int f() { return helper() + 2; }
}
