src/test/deca/context/invalid/return/return_expr_void_call_custom.deca
// Description :
// utilisation d'un appel void dans un return
//
// Resultats :
// Erreur contextuelle
// Ligne 8 : type void invalide

class O {
    void g() {}
    int f() {
        return g(); // invalide
    }
}
